default-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-httproute
  namespace: ingress-nginx
spec:
  parentRefs:
  - name: external-http-nginx
    namespace: ingress-nginx
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: ingress-nginx-controller
      port: 80
